examples/type_system/failing/37_pure_context_unannotated_infers_io_then_rejects_time_caller.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/37_pure_context_unannotated_infers_io_then_rejects_time_caller.flx
// error[E400]: Missing Ambient Effect
//
// Call to `sink` requires effect `Console` in this function signature.
//
//   examples/type_system/failing/37_pure_context_unannotated_infers_io_then_rejects_time_caller.flx:28:5
//    |
// 28 |     sink("hello")
//    |     ^^^^
//    |     ---- effectful call occurs here
//
// Hint:
//   Add `with Console` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

// A3 matrix: unannotated function infers IO; restricted typed caller is rejected.

fn sink(msg) {
    print(msg)
}

fn only_time() -> Int with Time {
    sink("hello")
    1
}

fn main() -> Unit with IO, Time {
    only_time();
}
